finish filter and init accounts structur

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,45 +1,2 @@
 <app-menu [menuList]="menu"></app-menu>
-<div class="container">
-
-
-  <app-card-view>
-    <button mat-button color="primary" class="btn-default" (click)="openDialog()">Adicionar Despesa</button>
-    <div class="center">
-      <mat-spinner *ngIf="loading"></mat-spinner>
-     </div>
-    <table *ngIf="!loading" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-      <ng-container matColumnDef="despesa">
-        <th mat-header-cell *matHeaderCellDef> Despesa </th>
-        <td mat-cell *matCellDef="let element"> {{element.despesa}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="categoria">
-        <th mat-header-cell *matHeaderCellDef> Categoria </th>
-        <td mat-cell *matCellDef="let element"> {{element.categoria}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="valor">
-        <th mat-header-cell *matHeaderCellDef> Valor </th>
-        <td mat-cell *matCellDef="let element"> {{element.valor | currency: 'BRL': true}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="dataVencimento">
-        <th mat-header-cell *matHeaderCellDef> Data de Vencimento </th>
-        <td mat-cell *matCellDef="let element"> {{element.dataVencimento | date:'dd/MM/yyyy'}} </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    </table>
-    <mat-paginator #paginator [length]="100"
-      [pageSize]="2"
-      [pageSizeOptions]="pageSize"
-      aria-label="Select page">
-    </mat-paginator>
-  </app-card-view>
-  <div class="float-right" *ngIf="!loading">
-    <h1>Total despesas: {{total}}</h1>
-  </div>
-</div>
+<router-outlet></router-outlet>
