--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item" *ngFor="let menu of menuList">
-        <a class="nav-link" href="#">{{menu.name}}</a>
+        <a class="nav-link" href="#" [routerLink]="[menu.name.toLowerCase()]">{{menu.name}}</a>
       </li>
     </ul>
   </div>
