--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="container display-flex">
+  <div class="row">
+    <div class="col">
+      <h1>Controle suas Finanças</h1>
+      <p>Tenha o controle das suas dívidas, e saia do vermelho.</p>
+    </div>
+    <div class="col">
+    <div class="col">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente odio itaque veniam adipisci accusantium? Debitis, natus autem. Amet nemo fugiat blanditiis nobis dolorum atque saepe neque quo? Libero, error omnis!
+    </div>
+  </div>
+</div>
