--- a/src/app/components/accounts/accounts.component.scss
+++ b/src/app/components/accounts/accounts.component.scss
@@ -3,3 +3,15 @@
   flex-direction: row;
   justify-content: center;
 }
+
+.logo-pdf {
+  width: 3%;
+}
+
+.custom-display {
+  display: inline-block;
+}
+
+.mat-accordion .mat-expansion-panel:last-of-type {
+  margin-top: 10px;
+}
