--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,46 @@
 <div class="container display-flex">
   <div class="row">
-    <div class="col">
+    <div class="col-6">
       <h1>Controle suas Finanças</h1>
       <p>Tenha o controle das suas dívidas, e saia do vermelho.</p>
     </div>
-    <div class="col">
-    <div class="col">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente odio itaque veniam adipisci accusantium? Debitis, natus autem. Amet nemo fugiat blanditiis nobis dolorum atque saepe neque quo? Libero, error omnis!
+    <div class="col-6">
+      <mat-tab-group>
+        <mat-tab label="ENTRAR">
+          <form>
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+
+            <div class="input-group mb-3">
+              <input type="emal" class="form-control" placeholder="Email" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary" type="button">ENTRAR</button>
+            </div>
+          </form>
+        </mat-tab>
+        <mat-tab label="CADASTRAR">
+          <form>
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+
+            <div class="input-group mb-3">
+              <input type="email" class="form-control" placeholder="Email" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+
+            <div class="input-group mb-3">
+              <input type="password" class="form-control" placeholder="Senha" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+
+
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary" type="button">ENTRAR</button>
+            </div>
+          </form>
+        </mat-tab>
+      </mat-tab-group>
     </div>
-  </div>
 </div>
