create register form

--- a/src/app/components/expense/expense.component.html
+++ b/src/app/components/expense/expense.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mt-5" >
     <div class="col-4" *ngFor="let card of cards">
-      <mat-card class="card" [routerLink]="[card.routerLink]">
+      <mat-card class="card" [routerLink]="genratePath(card.routerLink)">
         <p>{{card.title}}</p>
         <h1>{{card.value}}</h1>
       </mat-card>
