finish login and init dashboard

--- a/src/app/components/expense/expense.component.html
+++ b/src/app/components/expense/expense.component.html
@@ -10,7 +10,7 @@
   <app-card-view>
     <h1>Despesas</h1>
     <mat-form-field appearance="standard" class="input-filter">
-      <mat-label class="mat-label">Filtrar Despesas</mat-label>
+      <mat-label class="mat-label">Econtrar Despesa</mat-label>
       <input
         matInput
         placeholder="Pesquisar despesas"
