--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container display-flex">
   <div class="row">
     <div class="col-6">
-      <h1>Controle suas Finanças</h1>
+      <h1>Controle suas Dividas</h1>
       <p>Tenha o controle das suas dívidas, e saia do vermelho.</p>
     </div>
     <div class="col-6">
