--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,7 +1,11 @@
-<nav class="navbar navbar-expand-lg bg-dark">
-  <ul>
-    <li *ngFor="let menu of menuList">
-      <a class="nav-link" href="#" [routerLink]="[menu.name.toLowerCase()]">{{menu.name}}</a>
-    </li>
-  </ul>
+<nav id="menu">
+<div class="container">
+  <div class="col-3">
+    <ul>
+      <li class="mt-3">
+        <a href="#">Olá seja bem vindo {{nameClient}}</a>
+      </li>
+    </ul>
+  </div>
+</div>
 </nav>
