--- a/src/app/components/accounts/accounts.component.html
+++ b/src/app/components/accounts/accounts.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-card-view>
-    <h1>Contas</h1>
+    <h1>Upload de Contas</h1>
     <p>Faça o upload de suas contas.</p>
 
     <form class="example-form" enctype="multipart/form-data" method="post">
@@ -17,7 +17,7 @@
   </app-card-view>
 
   <app-card-view>
-    <h1>Contas</h1>
+    <h1>Visualizar Contas</h1>
     <p>Aqui você pode ver as contas que você fez upload</p>
 
     <div class="center">
