--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,5 @@
-<app-menu [nameClient]="nameClient"></app-menu>
-<app-expense></app-expense>
+<div class="main">
+  <app-menu [menuList]="menu" [nameClient]="nameClient"></app-menu>
+  <app-expense></app-expense>
+  <app-accounts></app-accounts>
+</div>
