--- a/src/app/components/expense/expense.component.html
+++ b/src/app/components/expense/expense.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row mt-5" >
-    <div class="col-4" *ngFor="let card of cards">
+    <div class="col-6" *ngFor="let card of cards">
       <mat-card class="card" [routerLink]="genratePath(card.routerLink)">
         <p>{{card.title}}</p>
         <h1>{{card.value}}</h1>
@@ -8,20 +8,19 @@
     </div>
   </div>
   <app-card-view>
-    <h1>Despesas</h1>
+    <h1>Cadastre suas Dívidas</h1>
     <mat-form-field appearance="standard" class="input-filter">
-      <mat-label class="mat-label">Econtrar Despesa</mat-label>
+      <mat-label class="mat-label">Econtrar Dívida</mat-label>
       <input
         matInput
-        placeholder="Pesquisar despesas"
+        placeholder="Pesquisar Dívida"
         (keyup)="applyFilter($event)"
         #input
       />
     </mat-form-field>
     <button
-      mat-button
       color="primary"
-      class="btn-default"
+      class="btn-default btn btn-primary"
       (click)="openDialog()"
     >
       Adicionar Despesa
