--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,9 +1,9 @@
 <nav id="menu">
 <div class="container">
-  <div class="col-3">
+  <div class="col-4">
     <ul>
-      <li class="mt-3">
-        <a href="#">Olá seja bem vindo {{nameClient}}</a>
+      <li class="mt-3" *ngFor="let item of menuList">
+        <a> {{item.name}}</a>
       </li>
     </ul>
   </div>
