--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,11 +1,28 @@
 <nav id="menu">
 <div class="container">
-  <div class="col-4">
-    <ul>
-      <li class="mt-3" *ngFor="let item of menuList">
-        <a> {{item.name}}</a>
-      </li>
-    </ul>
+  <div class="row">
+    <div class="col-4">
+      <ul>
+        <li class="mt-3">
+          <a><b>Olá, boa tarde. Seja bem vindo Beltrano!</b></a>
+        </li>
+      </ul>
+    </div>
+    <div class="col-4">
+      <ul>
+        <li class="mt-3" *ngFor="let item of menuList">
+          <a> {{item.name}}</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="col-3">
+      <ul>
+        <li class="mt-3">
+          <a class="">Logout</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
 </nav>
