--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,49 +1,53 @@
-<div class="container display-flex">
-  <div class="row">
-    <div class="col-6">
-      <h1>Controle suas Dividas</h1>
-      <p>Tenha o controle das suas dívidas, e saia do vermelho.</p>
-    </div>
-    <div class="col-6">
-      <mat-tab-group>
-        <mat-tab label="ENTRAR">
-          <form [formGroup]="formLogin">
-            <div class="input-group mb-3">
-              <input type="email" class="form-control" placeholder="E-mail" aria-label="E-mail" aria-describedby="basic-addon1" formControlName="email">
-            </div>
+<div class="main">
+  <div class="container display-flex">
+    <div class="row">
+      <div class="col-xs-12 col-lg-6  mt-5">
+        <h1>Controle suas Dividas</h1>
+        <p>Tenha o controle das suas dívidas, e saia do vermelho.</p>
+      </div>
+      <div class="col-xs-12 col-lg-6">
+        <mat-card>
+          <mat-tab-group>
+            <mat-tab label="ENTRAR">
+              <form [formGroup]="formLogin">
+                <div class="input-group mb-3">
+                  <input type="email" class="form-control" placeholder="E-mail" aria-label="E-mail" aria-describedby="basic-addon1" formControlName="email">
+                </div>
 
-            <div class="input-group mb-3">
-              <input type="password" class="form-control" placeholder="Senha" aria-label="Senha" aria-describedby="basic-addon1" formControlName="password">
-            </div>
+                <div class="input-group mb-3">
+                  <input type="password" class="form-control" placeholder="Senha" aria-label="Senha" aria-describedby="basic-addon1" formControlName="password">
+                </div>
 
-            <div class="d-grid gap-2">
-              <button class="btn btn-primary" type="button" (click)="login()">ENTRAR</button>
-            </div>
-          </form>
-        </mat-tab>
-        <mat-tab label="CADASTRAR">
-          <form [formGroup]="formRegister">
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1"
-              formControlName="name">
-            </div>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-primary" type="button" (click)="login()">ENTRAR</button>
+                </div>
+              </form>
+            </mat-tab>
+            <mat-tab label="CADASTRAR">
+              <form [formGroup]="formRegister">
+                <div class="input-group mb-3">
+                  <input type="text" class="form-control" placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1"
+                  formControlName="name">
+                </div>
 
-            <div class="input-group mb-3">
-              <input type="email" class="form-control" placeholder="Email" aria-label="Username" aria-describedby="basic-addon1"
-              formControlName="email">
-            </div>
+                <div class="input-group mb-3">
+                  <input type="email" class="form-control" placeholder="Email" aria-label="Username" aria-describedby="basic-addon1"
+                  formControlName="email">
+                </div>
 
-            <div class="input-group mb-3">
-              <input type="password" class="form-control" placeholder="Senha" aria-label="Username" aria-describedby="basic-addon1"
-              formControlName="password">
-            </div>
+                <div class="input-group mb-3">
+                  <input type="password" class="form-control" placeholder="Senha" aria-label="Username" aria-describedby="basic-addon1"
+                  formControlName="password">
+                </div>
 
 
-            <div class="d-grid gap-2">
-              <button class="btn btn-primary" type="button" (click)="openDialogRegister()">CONTINUAR CADASTRO</button>
-            </div>
-          </form>
-        </mat-tab>
-      </mat-tab-group>
-    </div>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-primary" type="button" (click)="openDialogRegister()">CONTINUAR CADASTRO</button>
+                </div>
+              </form>
+            </mat-tab>
+          </mat-tab-group>
+        </mat-card>
+      </div>
+  </div>
 </div>
