--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,3 +1,7 @@
+.main {
+  background: rgb(240, 238, 238);
+}
+
 .display-flex{
   width: 70%;
   height: 100vh;
@@ -9,9 +13,30 @@
 
   h1 {
     font-size: 40px;
+
+
   }
 
+  p {
+    font-size: 18px;
+  }
+
+  @media screen and(min-width: 400px){
+      h1,
+      p {
+        text-align: center;
+      }
+  }
+
+  @media screen and(min-width: 960px){
+    h1,
+    p {
+      text-align: left;
+    }
+  }
   input {
     margin-top: 20px;
   }
+
 }
+
