--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,14 +1,14 @@
 <nav id="menu">
 <div class="container">
   <div class="row">
-    <div class="col-4">
+    <div class="col-xs-12 col-lg-4">
       <ul>
         <li class="mt-3">
           <a><b>Olá, boa tarde. Seja bem vindo Beltrano!</b></a>
         </li>
       </ul>
     </div>
-    <div class="col-4">
+    <div class="col-xs-12 col-lg-5">
       <ul>
         <li class="mt-3" *ngFor="let item of menuList">
           <a> {{item.name}}</a>
@@ -16,10 +16,10 @@
       </ul>
     </div>
 
-    <div class="col-3">
+    <div class="col-xs-12 col-lg-2">
       <ul>
         <li class="mt-3">
-          <a class="">Logout</a>
+          <a (click)="logout()">Logout</a>
         </li>
       </ul>
     </div>
