--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <app-menu [menuList]="menu" [nameClient]="nameClient"></app-menu>
+  <app-menu [menuList]="menu"></app-menu>
   <app-expense></app-expense>
   <app-accounts></app-accounts>
 </div>
