--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -4,7 +4,7 @@
     <div class="col-xs-12 col-lg-4">
       <ul>
         <li class="mt-3">
-          <a><b>Olá, boa tarde. Seja bem vindo Beltrano!</b></a>
+          <a><b>Olá, {{messageHor()}}. Seja bem vindo(a)!</b></a>
         </li>
       </ul>
     </div>
