--- a/src/app/shared/add-expense/add-expense.component.html
+++ b/src/app/shared/add-expense/add-expense.component.html
@@ -1,7 +1,7 @@
 
 <form [formGroup]="form">
   <div class="form-group">
-    <label for="exampleFormControlSelect1">Despesa</label>
+    <label for="exampleFormControlSelect1">Dívida</label>
     <input
     type="text"
     class="form-control"
