continuar.. implementar component meses para atualizar a tabela de dividas

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="main">
   <app-menu [menuList]="menu"></app-menu>
   <app-expense></app-expense>
+  <app-revenues></app-revenues>
   <app-accounts></app-accounts>
 </div>
