--- a/src/app/components/revenues/revenues.component.html
+++ b/src/app/components/revenues/revenues.component.html
@@ -1,1 +1,64 @@
-<p>revenues works!</p>
+<div class="container">
+  <app-card-view>
+    <h1>Cadastre suas Receitas</h1>
+    <mat-form-field appearance="standard" class="input-filter">
+      <mat-label class="mat-label">Econtrar Receita</mat-label>
+      <input
+        matInput
+        placeholder="Pesquisar Receita"
+        (keyup)="applyFilter($event)"
+        #input
+      />
+    </mat-form-field>
+    <button
+      color="primary"
+      class="btn-default btn btn-primary"
+      (click)="openDialog()"
+    >
+      Adicionar Receita
+    </button>
+    <div class="center">
+      <mat-spinner *ngIf="loading"></mat-spinner>
+    </div>
+    <table
+      *ngIf="!loading"
+      mat-table
+      [dataSource]="dataSource"
+      class="mat-elevation-z8"
+    >
+
+      <ng-container matColumnDef="tipoReceita">
+        <th mat-header-cell *matHeaderCellDef>Tipo de Receita</th>
+        <td mat-cell *matCellDef="let element">{{ element.tipoReceita }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="valor">
+        <th mat-header-cell *matHeaderCellDef>Valor</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.valor | currency: "BRL":true }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="dataEntrada">
+        <th mat-header-cell *matHeaderCellDef>Data de Entrada</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.dataEntrada | date: "dd/MM/yyyy" }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <mat-paginator
+      #paginator
+      [length]="100"
+      [pageSize]="2"
+      [pageSizeOptions]="pageSize"
+      aria-label="Select page"
+    >
+    </mat-paginator>
+  </app-card-view>
+  <div class="float-right" *ngIf="!loading">
+    <h1>Total das suas Receitas: {{ total | currency: 'BRL': true}}</h1>
+  </div>
+</div>
