--- a/src/app/components/months/months.component.html
+++ b/src/app/components/months/months.component.html
@@ -1,1 +1,11 @@
-<p>months works!</p>
+<div class="container">
+  <div class="container-display">
+    <span class="arrow-left">
+      <img src="assets/images/arrow-left.png" alt="" (click)="prev()">
+    </span>
+    <span class="text">{{mounth}}</span>
+    <span class="arrow-right">
+      <img src="assets/images/arrow-right.png" alt="" (click)="next()">
+    </span>
+  </div>
+</div>
