--- a/src/app/components/expense/expense.component.html
+++ b/src/app/components/expense/expense.component.html
@@ -9,16 +9,18 @@
   </div>
   <app-card-view>
     <app-months></app-months>
-    <h1>Cadastre suas Dívidas</h1>
-    <mat-form-field appearance="standard" class="input-filter">
-      <mat-label class="mat-label">Econtrar Dívida</mat-label>
-      <input
-        matInput
-        placeholder="Pesquisar Dívida"
-        (keyup)="applyFilter($event)"
-        #input
-      />
-    </mat-form-field>
+    <div *ngIf="!emptyResult && !loading">
+      <h1>Cadastre suas Dívidas</h1>
+      <mat-form-field appearance="standard" class="input-filter">
+        <mat-label class="mat-label">Econtrar Dívida</mat-label>
+        <input
+          matInput
+          placeholder="Pesquisar Dívida"
+          (keyup)="applyFilter($event)"
+          #input
+        />
+      </mat-form-field>
+    </div>
     <button
       color="primary"
       class="btn-default btn btn-primary"
@@ -30,7 +32,7 @@
       <mat-spinner *ngIf="loading"></mat-spinner>
     </div>
     <table
-      *ngIf="!loading"
+      *ngIf="!loading && !emptyResult"
       mat-table
       [dataSource]="dataSource"
       class="mat-elevation-z8"
@@ -62,7 +64,9 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
+
     <mat-paginator
+      *ngIf="!emptyResult && !loading"
       #paginator
       [length]="100"
       [pageSize]="2"
@@ -70,6 +74,14 @@
       aria-label="Select page"
     >
     </mat-paginator>
+
+    <ng-container *ngIf="emptyResult && !loading">
+      <div class="container">
+        <div class="center">
+          <span>Você ainda não cadastrou dívidas para esse mês.</span>
+        </div>
+      </div>
+    </ng-container>
   </app-card-view>
   <div class="float-right" *ngIf="!loading">
     <h1>Total das suas dívidas: {{ total | currency: 'BRL': true}}</h1>
