--- a/src/app/components/revenues/revenues.component.scss
+++ b/src/app/components/revenues/revenues.component.scss
@@ -9,7 +9,8 @@ table {
 .mat-label {
   margin-right: 10px;
 }
-.center {
+.center,
+.display {
   display: flex;
   flex-direction: row;
   justify-content: center;
