--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,15 @@
 <div class="main">
   <app-menu [menuList]="menu"></app-menu>
+  <div class="container">
+    <div class="row mt-5" >
+      <div class="col-4" *ngFor="let card of cards">
+        <mat-card class="card">
+          <p>{{card.title}}</p>
+          <h1>{{card.value}}</h1>
+        </mat-card>
+      </div>
+    </div>
+  </div>
   <app-expense></app-expense>
   <app-revenues></app-revenues>
   <app-accounts></app-accounts>
