--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,8 +4,8 @@
     <div class="row mt-5" >
       <div class="col-4" *ngFor="let card of cards">
         <mat-card class="card">
-          <p>{{card.title}}</p>
-          <h1>{{card.value}}</h1>
+          <p>{{card.title }}</p>
+          <h1>{{card.value | currency: "BRL":true}}</h1>
         </mat-card>
       </div>
     </div>
