--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -21,7 +21,7 @@
                 <div class="d-grid gap-2">
                   <button class="btn btn-primary" type="button" (click)="login()">ENTRAR</button>
                 </div>
-                <p>Se você ainda não tiver os dados de login, será necessário realizar um cadastro.</p>
+                <p class="text-custom">Se você ainda não tiver os dados de login, será necessário realizar um cadastro.</p>
               </form>
             </mat-tab>
             <mat-tab label="CADASTRAR">
