--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -38,5 +38,11 @@
     margin-top: 20px;
   }
 
+  .text-custom {
+    position: relative;
+    top: 11px;
+    font-size: 13px;
+    text-align: left;
+  }
 }
 
