--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,3 +1,10 @@
 .main {
   background: rgb(240, 238, 238);
+
+  .negative {
+    background-color: red;
+  }
+  .positive {
+    background-color: green;
+  }
 }
