--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -4,7 +4,7 @@
     <div class="col-xs-12 col-lg-4">
       <ul>
         <li class="mt-3">
-          <a><b>Olá, {{messageHor()}}. Seja bem vindo(a)!</b></a>
+          <a>Olá, {{messageHor()}}. Seja bem vindo(a)!</a>
         </li>
       </ul>
     </div>
@@ -19,7 +19,7 @@
     <div class="col-xs-12 col-lg-2">
       <ul>
         <li class="mt-3">
-          <a (click)="logout()">Logout</a>
+          <a (click)="logout()">Sair</a>
         </li>
       </ul>
     </div>
