--- a/src/app/components/accounts/accounts.component.html
+++ b/src/app/components/accounts/accounts.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <app-card-view>
     <h1>Upload de Contas</h1>
-    <p>Faça o upload de suas contas.</p>
+    <p>Faça o upload de suas contas. O formato aceito é PDF.</p>
 
     <form class="example-form" enctype="multipart/form-data" method="post">
       <mat-form-field class="example-full-width" appearance="fill">
