--- a/src/app/shared/add-expense/add-expense.component.html
+++ b/src/app/shared/add-expense/add-expense.component.html
@@ -35,5 +35,5 @@
     id="dataVencimento" aria-describedby="dataVencimento"
     placeholder="Data de Vencimento" formControlName="dataVencimento">
   </div>
-  <button class="btn btn-primary" (click)="submit()">Adicionar despesa</button>
+  <button class="btn btn-primary" (click)="submit()">Adicionar Dívida</button>
 </form>
