--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -29,5 +29,5 @@
   </div>
   <app-expense></app-expense>
   <app-revenues></app-revenues>
-  <app-accounts></app-accounts>
+  <!-- <app-accounts></app-accounts> -->
 </div>
