--- a/src/app/components/expense/expense.component.html
+++ b/src/app/components/expense/expense.component.html
@@ -53,6 +53,13 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="_id">
+        <th mat-header-cell *matHeaderCellDef>Id Dívida</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element._id}}
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="acoes">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let element">
