--- a/src/app/components/revenues/revenues.component.html
+++ b/src/app/components/revenues/revenues.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-card-view>
-    <app-months [typeItem]="'revenues'"></app-months>
+    <app-months-revenues [typeItem]="'revenues'"></app-months-revenues>
     <div *ngIf="!emptyResult && !loading">
       <h1>Cadastre suas Receitas</h1>
       <mat-form-field appearance="standard" class="input-filter">
@@ -51,6 +51,22 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="_id">
+        <th mat-header-cell *matHeaderCellDef>Id Dívida</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element._id}}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="acoes">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let element">
+          <div *ngFor="let img of element.acoes; let i = index">
+            <img class="image" (click)="selectAction(img, element)" [src]="img" alt="">
+          </div>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
@@ -64,6 +80,7 @@
     </mat-paginator> -->
     <ng-container *ngIf="emptyResult && !loading">
       <div class="container">
+        <h2 class="center">Receitas são todos os valores que entram a mais. Ex: Salário/presente</h2>
         <div class="center">
           <span>Você ainda não cadastrou receitas para esse mês.</span>
         </div>
