--- a/src/app/shared/add-expense/add-expense.component.html
+++ b/src/app/shared/add-expense/add-expense.component.html
@@ -6,7 +6,7 @@
     type="text"
     class="form-control"
     id="depesa" aria-describedby="despesa"
-    placeholder="Despesa" formControlName="despesa">
+    placeholder="Tipo de Dívida" formControlName="despesa">
     <div class="error">
 
     </div>
